# django_hmac_authentication

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  dev-requirements.txt  dist-requirements.txt  pyproject.toml  requirements.txt
src/: pytest.ini
src/django_hmac_authentication/: __init__.py  admin.py  aes.py  apps.py  authentication.py  checks.py  client_utils.py  common_utils.py  exceptions.py  models.py  serializers.py  server_utils.py  settings.py  signals.py  throttling.py  utils.py  views.py
src/django_hmac_authentication/crypt/: aes.py  camellia.py  hmac.py  padding.py  settings.py  signatures.py
src/django_hmac_authentication/migrations/: 0001_initial.py  0002_apihmackey_failed_attempts.py  0003_apihmackey_expires_at.py  0004_apihmackey_throttle_rate.py  0005_alter_apihmackey_throttle_rate.py  0006_apihmackey_cipher_algorithm.py  0007_apihmackey_test_mode.py
src/example_django_project/: example_python_client.py  python_client.py
src/tests/: factories.py  test_authentication__expires_in.py  test_authentication__failed_attempts_threshold.py  test_authentication__http_methods.py  test_authentication__key_user.py  test_authentication__misc.py  test_authentication_api_key_secret.py  test_checks.py  test_crypt_ciphers.py  test_crypt_hmac.py  test_crypt_padding.py  test_crypt_signatures.py  test_hmac_authorization_header_parsing.py  test_hmac_header_name.py  test_hmac_kill_switch.py  test_mgmt_cmd_create_hmac_for_user.py  test_padding.py  test_server_client_utils.py  test_settings.py  test_signal_handlers.py  test_throttling.py  test_utils.py  test_view_create_api_key_secret.py  testing_utils.py
(+12 files in other folders)
